# VRCStreamer

./: .gitattributes  .gitignore  CNAME  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: static.yml
client/: aac-worker.js  client.js  config.json  index.html  message.json  servers.json  style.css  video-worker.js
client/lang/: en.json  ja.json  ru.json
client/scripts/: aac-worker.js  audio-worklet.js  client.js  streamer.js  ui.js  video-worker.js
server/: .env.example  Cargo.toml  build.sh  create_service.sh  kill_service.sh
server/placeholders/: audio_only.h264  audio_only_1080.h264  offline.h264  offline_1080.h264
server/src/: limits.rs  main.rs  media.rs  rtsp.rs  tests.rs  websocket.rs
