[package]
name = "vrc-audio-streamer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
bytes = "1.11.0"
rustls = { version = "0.23.41", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "rt", "signal", "sync", "time"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = true
